      the issue altogether.
  - Fixed a crash when trying to use AddFont() with MergeMode=true on a font that
    has already been rendered. (#9162) [@ocornut, @cyfewlp]
  - Removed ImFontConfig::PixelSnapV added in 1.92 which turns out is unnecessary
    (and misdocumented). Post-rescale GlyphOffset is always rounded.
 - Popups: changed compile-time 'ImGuiPopupFlags popup_flags = 1' default value to be '= 0' for
   BeginPopupContextItem(), BeginPopupContextWindow(), BeginPopupContextVoid(), OpenPopupOnItemClick().
   The default value has same meaning before and after. (#9157, #9146)
   - Before this version, those functions had a 'ImGuiPopupFlags popup_flags = 1' default
     value in their function signature. This was introduced by a change on 2020/06/23 (1.77)
     while changing the signature from 'int mouse_button' to 'ImGuiPopupFlags popup_flags'
     and trying to preserve then-legacy behavior.
   - We have now changed this behavior to: cleanup a very old API quirk, facilitate use by
     bindings, and to remove the last and error-prone non-zero default value. Also because we
     deemed it extremely rare to use those helper functions with the Left mouse button!
     As using the LMB would generally be triggered via another widget, e.g. a Button() +
     a OpenPopup()/BeginPopup() call.
   - Before: The default = 1 means ImGuiPopupFlags_MouseButtonRight.
             Explicitly passing a literal 0 means ImGuiPopupFlags_MouseButtonLeft.
   - After:  The default = 0 means ImGuiPopupFlags_MouseButtonRight.
             Explicitly passing a literal 1 also means ImGuiPopupFlags_MouseButtonRight
             (if legacy behavior are enabled) or will assert (if legacy behavior are disabled).
   - TL;DR: if you don't want to use right mouse button for popups, always specify it
     explicitly using a named ImGuiPopupFlags_MouseButtonXXXX value.
   Recap: